--- a/JAD.Heroku.SDK/JAD.Heroku.SDK.csproj
+++ b/JAD.Heroku.SDK/JAD.Heroku.SDK.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
@@ -9,8 +9,9 @@
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageTags>.NetCore, Heroku, HerokuPlatformAPI, API</PackageTags>
     <RepositoryUrl>https://github.com/Julien-Ambos-Development/heroku-platform-api-csharp</RepositoryUrl>
-    <Version>1.0.1</Version>
+    <Version>1.0.2</Version>
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
+    <PackageRequireLicenseAcceptance>true</PackageRequireLicenseAcceptance>
   </PropertyGroup>
 
   <ItemGroup>
